--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
-          service: your-cloud-run-service
+          service: translation-app
           region: us-central1
           image: gcr.io/translation-app-452812/translation-app
