--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: Deploy to Cloud Run
+
 on:
   push:
     branches: [main]
@@ -7,19 +8,28 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Auth with GCP
+      - name: Authenticate with GCP
         uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-      - name: Setup gcloud
+      - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
+
+      - name: Configure Docker for GCP
+        run: gcloud auth configure-docker
+
+      - name: Build and Push Docker image
+        run: |
+          docker build -t gcr.io/translation-app-452812/translation-app:${{ github.sha }} .
+          docker push gcr.io/translation-app-452812/translation-app:${{ github.sha }}
 
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: translation-app
           region: us-central1
-          image: gcr.io/translation-app-452812/translation-app
+          image: gcr.io/translation-app-452812/translation-app:${{ github.sha }}
