--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-nicegui
-python-docx
-python-pptx
-PyMuPDF
-openai
-tiktoken
-python-dotenv
+nicegui>=1.3.15
+python-docx>=0.8.11
+python-pptx>=0.6.21
+PyMuPDF>=1.23.6
+openai>=1.25.0
+tiktoken>=0.5.1
+python-dotenv>=1.0.1
